[gd_scene load_steps=2 format=3 uid="uid://y450a2mtc4om"]

[ext_resource type="Script" uid="uid://bvp07tbvon7gj" path="res://scenes/rename_file/rename_file.gd" id="1_4de6o"]

[node name="RenameFile" type="PanelContainer" node_paths=PackedStringArray("rename_line_edit")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"overlay_background"
script = ExtResource("1_4de6o")
rename_line_edit = NodePath("Panel/Margin/VBox/RenameFileLineEdit")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "text_rename_file_to"

[node name="RenameFileLineEdit" type="LineEdit" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "button_cancel"

[node name="SaveButton" type="Button" parent="Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"main_button"
text = "button_save"

[connection signal="text_submitted" from="Panel/Margin/VBox/RenameFileLineEdit" to="." method="_on_rename_file_line_edit_text_submitted"]
[connection signal="pressed" from="Panel/Margin/VBox/HBox/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/HBox/SaveButton" to="." method="_on_save_button_pressed"]
